[package]
edition = "2021"
name = "p-trend_core"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.0", default-features = false, features = ["napi4"] }
napi-derive = "2.9.1"
swc="0.236.0"
swc_ecma_parser  = "0.123.14"
swc_ecma_ast = "0.95.9"
swc_common = "0.29.25"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

regex="1.7.0"
globmatch = "0.2.1"


[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
